--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
-  file_picker: ^8.3.5
+  file_picker: ^10.1.2
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.5
+  provider: ^6.1.4
+  google_sign_in: ^6.3.0
+  googleapis: ^14.0.0
+  googleapis_auth: ^2.0.0
+  http: ^1.3.0
+  path: ^1.9.1
 
 
 dev_dependencies:
