--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,8 @@ dependencies:
   cloud_firestore: ^5.6.6
   firebase_storage: ^12.4.5
   provider: ^6.1.4
-  google_sign_in: ^6.3.0
-  googleapis: ^14.0.0
-  googleapis_auth: ^2.0.0
-  http: ^1.3.0
   path: ^1.9.1
+  supabase_flutter: ^2.8.4
 
 
 dev_dependencies:
