--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.1.4
   path: ^1.9.1
   supabase_flutter: ^2.8.4
+  youtube_player_flutter: ^9.1.1
+  http: ^1.3.0
 
 
 dev_dependencies:
