--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   youtube_player_flutter: ^9.1.1
   http: ^1.3.0
+  metadata_fetch: ^0.4.2
 
 
 dev_dependencies:
